MDEV-8208 : Sporadic SEGFAULT on startup

During server start, as wsrep initialization happens before
plugin_init(), segfault may occur if wsrep THDs try to access
the uninitialized maria_hton.