sql/mysqld.cc
@@ -4497,6 +4497,12 @@ will be ignored as the --log-bin option is not defined.");
         set_ports(); // this is also called in network_init() later but we need
                      // to know mysqld_port now - lp:1071882
 #endif /* !EMBEDDED_LIBRARY */
+
+        /*
+          Plugin initialization (plugin_init()) hasn't happened yet, set
+          maria_hton to 0.
+        */
+        maria_hton= 0;
         wsrep_init_startup(true);
       }
     }
